Fix slider height on mobile

--- a/src/jsx/components/page-specific/main/HeroSlider/_HeroSlider.scss
+++ b/src/jsx/components/page-specific/main/HeroSlider/_HeroSlider.scss
@@ -1,7 +1,15 @@
 @import "../../../../../scss/config/colors";
 
 #hero-slider {
-  height: 500px;
+  height: 300px;
+
+  @media (min-width: 768px) {
+    height: 400px;
+  }
+
+  @media (min-width: 992px) {
+    height: 500px;
+  }
 
   .carousel-inner {
     height: 100%;
