--- a/src/jsx/components/shared/Navbar/_Navbar.scss
+++ b/src/jsx/components/shared/Navbar/_Navbar.scss
@@ -2,9 +2,9 @@
 
 .navbar {
   background-color: $customBrown;
-  max-height: 60px;
 
   @media (min-width: 992px) {
+    max-height: 60px;
     overflow: hidden;
   }
 
@@ -16,7 +16,9 @@
     transition: 300ms all ease;
 
     &.navbar-brand {
-      font-size: 2rem;
+      @media (min-width: 992px) {
+        font-size: 2rem;
+      }
     }
 
     &:hover {
